Revert "fix: changed card-text to white to improve contrast (#201)" (#204)
This reverts commit c88616ba98f151597002cbdfbf948d46a0596492.

--- a/css/styles.css
+++ b/css/styles.css
@@ -383,7 +383,7 @@ a.nav-link:hover {
 }
 
 .card-text {
-  color: white;
+  color: black;
 }
 
 @media (prefers-color-scheme: dark) {
